# ImmunoTyper-SR

./: AUTHORS.rst  Dockerfile  LICENSE  LICENSE.txt  README.md  docker-entrypoint.sh  environment.yml  immunotyper.py  install-dependencies.sh  pyproject.toml  run_immunotyper.py  setup.cfg  setup.py  update-all-db.sh
data/: IMGT_IGHV_reference_allele_db-updated.fasta.amb  IMGT_IGHV_reference_allele_db-updated.fasta.ann  IMGT_IGHV_reference_allele_db-updated.fasta.bwt  IMGT_IGHV_reference_allele_db-updated.fasta.pac  IMGT_IGHV_reference_allele_db-updated.fasta.sa
database/: Complete.Human.IGHV_IMGT.Feb2018.Corey.linear.modified.fasta  IMGTGENEDB-ReferenceSequences.fasta-nt-WithGaps-F+ORF+inframeP  V-QUEST-reference-allele-db+no-period-references.clustalw.fasta  V-QUEST-reference-allele-db+no-period-references.clustalw.no-gaps.fasta  ignored_alleles.txt
immunotyper/: __main__.py  allele_clusters.py  allele_database.py  bam_filter_classes.py  bwa_wrapper.py  candidate_builder_classes.py  common.py  lpinterface.py  mapper_wrappers.py  models.py  post_processing.py  read_filter_classes.py  solvers.py
immunotyper/data/: IMGT_IGHV_reference_allele_db-updated+oscar_novel-aligned.fasta  IMGT_IGHV_reference_allele_db-updated+oscar_novel-aligned.fasta.amb  IMGT_IGHV_reference_allele_db-updated+oscar_novel-aligned.fasta.sa  hg38_chromosome_alt_ids.tsv  (+8 more)
src/: __init__.py  blasr_wrapper.py  call_variants.py  candidate_calling.py  cluster_breaker.py  cluster_class.py  clustering.py  common.py  create_allele_db.py  lpinterface.py  minimap_wrapper.py  msa_generators.py
(+294 files in other folders)
