[metadata]
name = immunotyper
version = attr: immunotyper.__version__
author = Michael Ford
author_email = mike_ford@sfu.ca
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/algo-cancer/ImmunoTyper-SR
project_urls =
    Bug Tracker = https://github.com/algo-cancer/ImmunoTyper-SR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    biopython
    dill
    gurobipy
    logbook
    pysam

[options.packages.find]
where = 

[options.package_data]
* = *.fasta*, *.txt, *.tsv, *.fa*, *.bed

[options.entry_points]
console_scripts =
    immunotyper-SR = immunotyper.__main__:main
